plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithBundledCompilerPlugins/dataframe_accidentallyLocalDeclaration.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/dataframe_fake_plugin.jar
// FILE: main.kt
// CHECK_SYMBOL_NAMES
// ALLOW_ERRORS
// HIGHLIGHTER_ATTRIBUTES_KEY
package test

<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_KEYWORD'")!>import<!> org.jetbrains.kotlinx.dataframe.annotations.<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_ANNOTATION'")!>DataSchema<!>
<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_KEYWORD'")!>import<!> org.jetbrains.kotlinx.dataframe.api.cast
<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_KEYWORD'")!>import<!> org.jetbrains.kotlinx.dataframe.api.dataFrameOf

fun <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>testCast<!>() {
    val <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>df<!> = <!HIGHLIGHTING("descr='[FUNCTION_CALL_SCHEMA]  firstName: String'; highlightingTextAttributesKey='INFORMATION_ATTRIBUTES'")!><!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_PACKAGE_FUNCTION_CALL'")!>dataFrameOf<!>("firstName")<!>(
        "Alice"
    ).<!HIGHLIGHTING("severity='ERROR'; descr='[NONE_APPLICABLE] None of the following candidates is applicable:  fun <T> DataFrame<*>.cast(): DataFrame<T>:   Candidate 'fun <T> DataFrame<*>.cast(): DataFrame<T>' is inapplicable because of a receiver type mismatch.  fun <reified T> DataFrame<*>.cast(verify: Boolean = ...): DataFrame<T>:   Candidate 'fun <reified T> DataFrame<*>.cast(verify: Boolean = ...): DataFrame<T>' is inapplicable because of a receiver type mismatch.  fun <T> DataRow<*>.cast(): DataRow<T>:   Candidate 'fun <T> DataRow<*>.cast(): DataRow<T>' is inapplicable because of a receiver type mismatch.  fun <reified T> DataRow<*>.cast(verify: Boolean = ...): DataRow<T>:   Candidate 'fun <reified T> DataRow<*>.cast(verify: Boolean = ...): DataRow<T>' is inapplicable because of a receiver type mismatch.  fun <T> DataColumn<*>.cast(): DataColumn<T>:   Candidate 'fun <T> DataColumn<*>.cast(): DataColumn<T>' is inapplicable because of a receiver type mismatch.  fun <T> ValueColumn<*>.cast(): ValueColumn<T>:   Candidate 'fun <T> ValueColumn<*>.cast(): ValueColumn<T>' is inapplicable because of a receiver type mismatch.  fun <T> ColumnGroup<*>.cast(): ColumnGroup<T>:   Candidate 'fun <T> ColumnGroup<*>.cast(): ColumnGroup<T>' is inapplicable because of a receiver type mismatch.  fun <T> ColumnWithPath<*>.cast(): ColumnWithPath<T>:   Candidate 'fun <T> ColumnWithPath<*>.cast(): ColumnWithPath<T>' is inapplicable because of a receiver type mismatch.  fun <T> ColumnAccessor<*>.cast(): ColumnAccessor<T>:   Candidate 'fun <T> ColumnAccessor<*>.cast(): ColumnAccessor<T>' is inapplicable because of a receiver type mismatch.  fun <C> ColumnSet<*>.cast(): ColumnSet<C>:   Candidate 'fun <C> ColumnSet<*>.cast(): ColumnSet<C>' is inapplicable because of a receiver type mismatch.  fun <C> ColumnsResolver<*>.cast(): ColumnsResolver<C>:   Candidate 'fun <C> ColumnsResolver<*>.cast(): ColumnsResolver<C>' is inapplicable because of a receiver type mismatch.  fun <C> SingleColumn<*>.cast(): SingleColumn<C>:   Candidate 'fun <C> SingleColumn<*>.cast(): SingleColumn<C>' is inapplicable because of a receiver type mismatch.  fun <C> TransformableColumnSet<*>.cast(): TransformableColumnSet<C>:   Candidate 'fun <C> TransformableColumnSet<*>.cast(): TransformableColumnSet<C>' is inapplicable because of a receiver type mismatch.  fun <C> TransformableSingleColumn<*>.cast(): TransformableSingleColumn<C>:   Candidate 'fun <C> TransformableSingleColumn<*>.cast(): TransformableSingleColumn<C>' is inapplicable because of a receiver type mismatch.  fun <C> ColumnReference<*>.cast(): ColumnReference<C>:   Candidate 'fun <C> ColumnReference<*>.cast(): ColumnReference<C>' is inapplicable because of a receiver type mismatch.'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!>cast<!><<!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference 'Person'.'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'")!>Person<!>>()
// } // commented on purpose to make Person class "accidentally" local

<!HIGHLIGHTING("severity='ERROR'; descr='[DATA_SCHEMA_LOCAL_DECLARATION] @DataSchema declarations cannot be local. Move this declaration outside the function body. This is required so that plugin-generated extension properties can refer to this @DataSchema.'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='ERROR'; descr='[LOCAL_INTERFACE_NOT_ALLOWED] Interface 'Person' cannot be local. Try to use an anonymous object or abstract class instead.'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!><!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_ANNOTATION'")!>@DataSchema<!>
interface <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_TRAIT'")!>Person<!><!> {
    val <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>firstName<!>: <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CLASS'")!>String<!>
}<!HIGHLIGHTING("severity='ERROR'; descr='Expecting '}''; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'")!><!>
